# Trabalho-ED2

Trabalho_Estrutura_de_Dados_II/: CMakeLists.txt  README1.md  README2.md  REPORT1.md  REPORT2.md
Trabalho_Estrutura_de_Dados_II/tabela/: CMakeLists.txt  config.h.in
Trabalho_Estrutura_de_Dados_II/tabela/include/: Node.h  config.h  hash.h  hash2.h  huffman.h  list.h  metrics.h  minheapnode.h  palavra.h  sort.h  tstNode.h  tstree.h
Trabalho_Estrutura_de_Dados_II/tabela/src/: Node.cc  hash.cc  hash2.cc  huffman.cc  list.cc  metrics.cc  minheapnode.cc  palavra.cc  tstree.cc
Trabalho_Estrutura_de_Dados_II/tests/: CMakeLists.txt  teste1.cc  teste2.cc  teste3.cc  teste4_01.cc  teste4_02.cc  teste4_03.cc  teste5.cc  teste6.cc
Trabalho_Estrutura_de_Dados_II/tests/expected_output/: test4_01.csv  test4_03.csv
Trabalho_Estrutura_de_Dados_II/tests/input/: livro1.txt  livro10.txt  livro2.txt  livro3.txt  livro4.txt  livro5.txt  livro6.txt  livro7.txt  livro9.txt  nome_arquivos.txt
